# robloxapi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: actions.yml
src/: api.rs  errors.rs  game.rs  https.rs  lib.rs  user.rs
src/games/: mod.rs  models.rs
src/users/: mod.rs  models.rs
tests/: main.rs
