[package]
name = "rsblox"
description = "A Rust library for the Roblox API."
version = "0.0.1"
authors = ["PythonicIconic <coatedalmond@protonmail.com>", "royce-mathew <royce1mathew@gmail.com>"]
license = "MIT"
homepage = "https://github.com/royce-mathew/robloxapi."
repository = "https://github.com/royce-mathew/robloxapi.git"
keywords = ["roblox", "api"]
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
serde_json = "1.0"
